# aibox-engine

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  download_model.py  pyproject.toml  requirements.txt  start.sh
.claude/: CLAUDE.md
alembic/: env.py
app/: __init__.py  main.py
app/api/: __init__.py  auth.py  chat.py  documents.py
app/core/: __init__.py  database.py  security.py
app/models/: __init__.py  schemas.py  user.py
app/services/: __init__.py  auth_service.py  chat_service.py  document_service.py  embedding_service.py  llm_service.py  text_chunking.py  text_extraction.py
